# offline_study_notes_app

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .vulture_whitelist.py  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENCE  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  pyproject.toml  requirements.txt  whitelist.py
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md  template.md
app/: app.py
app/ai/: json_generator.py  llama_engine.py  ocr_engine.py  whisper_engine.py
app/backend/: config.py  logger.py  pipeline.py  prompts.py
app/database/: history.py  schema.sql  sqlite.py
app/extractors/: audio.py  image.py  pdf.py  text.py
app/main/: app.py
app/processors/: chunker.py  cleaner.py  formatter.py  normalizer.py
app/utils/: constants.py  helpers.py  validator.py
models/: README.md
models/testdata/: README.md
models/tinyllama/: READNE.md
models/whisper/: README.md
specs/: ai-workflow.md  architecture.md  data-schema.md  deployment.md  feature_one.md  project-spec.md  roadmap.md  testing.md  work-division.md
specs/study-notes/: plan.md  spec.md  tasks.md
tests/: test_app.py
